--- a/app/public/modules/core/views/main.client.view.html
+++ b/app/public/modules/core/views/main.client.view.html
@@ -3,7 +3,7 @@
         <header data-ng-include="'/modules/core/views/header.client.view.html'"></header>
 
         <div class="content">
-            <div data-ui-view></div>
+            <div data-ui-view="main-view"></div>
         </div>
     </div>
 </section>
