--- a/app/public/modules/templates/views/templates-events-list.client.view.html
+++ b/app/public/modules/templates/views/templates-events-list.client.view.html
@@ -1,3 +1,7 @@
+<div href="#" class="nav-item">
+	<span class="nav-label">Events templates</span>
+	<a data-ui-sref="todo_state.events.create" class="fa fa-plus-circle add-task"></a>
+</div>
 <section data-ng-controller="templatesEventsListController as templatesEventsListCtrl">
 	<div class="form-group todo-list-controls" data-ng-show="templatesEventsListCtrl.templatesList.length > 1">
 		<a class="controls-link" ng-click="templatesEventsListCtrl.sortReverse = !templatesEventsListCtrl.sortReverse">
