[AD]. Improvement > EPMKHRDMH-267. Add Back button todo/templates/overdue screens

--- a/app/public/modules/core/less/core.less
+++ b/app/public/modules/core/less/core.less
@@ -382,3 +382,12 @@ div.ui-notification {
 	}
   }
 }
+
+
+.ui-sref.back {
+	display: inline-block;
+	margin-bottom: 20px;
+	&:hover {
+		text-decoration: underline;
+	}
+}
