--- a/app/public/modules/schedule-notifications/views/edit-notification.client.view.html
+++ b/app/public/modules/schedule-notifications/views/edit-notification.client.view.html
@@ -1,4 +1,6 @@
 <section data-ng-controller="ScheduleNotificationsController" data-ng-init="findOne()">
+    <a ui-sref="overdue" class="ui-sref back"> < BACK to "Track Progress" </a>
+
     <div class="page-header">
         <h1>Edit Notification</h1>
     </div>
