--- a/app/public/modules/tasks/views/edit-task.client.view.html
+++ b/app/public/modules/tasks/views/edit-task.client.view.html
@@ -1,4 +1,6 @@
 <div class="wrapper-content clearfix" data-ng-controller="TasksController" data-ng-init="editMode()">
+	<a ui-sref="todo_state" class="ui-sref back"> < BACK to "Plan Your Day" </a>
+
 	<form name="taskForm" novalidate>
 		<div class="row">
 			<div class="col-md-6 col-xs-12">
