--- a/app/public/modules/events/views/edit-event.client.view.html
+++ b/app/public/modules/events/views/edit-event.client.view.html
@@ -1,4 +1,6 @@
 <div class="wrapper">
+	<a ui-sref="todo_state" class="ui-sref back"> < BACK to "Plan Your Day" </a>
+
 	<section class="create-event-wrapper row clearfix" data-ng-controller="EventsController" data-ng-init="findEvent()">
 	<div class="col-md-12 ibox">
 		<form novalidate class="ibox-content">
