--- a/app/public/modules/schedule-notifications/views/view-notification.client.view.html
+++ b/app/public/modules/schedule-notifications/views/view-notification.client.view.html
@@ -1,4 +1,6 @@
 <div class="wrapper">
+	<a ui-sref="overdue" class="ui-sref back"> < BACK to "Track Progress" </a>
+
 	<section class="row" data-ng-controller="ScheduleNotificationsController" data-ng-init="findOne();">
 		<div class="col-lg-12">
 			<div class="wrapper wrapper-content">
