--- a/app/public/modules/schedule-notifications/views/list-notifications.client.view.html
+++ b/app/public/modules/schedule-notifications/views/list-notifications.client.view.html
@@ -1,14 +1,14 @@
 <section data-ng-controller="ScheduleNotificationsController" data-ng-init="find()">
 	<ul class="nav nav-second-level in collapse">
-		<li data-ng-repeat="notification in notifications.tasks">
-			<a ui-sref="todo_state.tasks.edit({ taskId: notification._id })" class="task-list-item">
-				<span class="task-priority fa fa-circle {{'task-priority-' + notification.priority}}"></span>
-				<span class="nav-label task-name" data-ng-bind="notification.title"></span>
-				<span class="pull-right label label-danger"> 0% </span>
+		<li data-ng-repeat="overdueTask in notifications.overdueTasks">
+			<a ui-sref="todo_state.tasks.edit({ taskId: overdueTask._id })" class="task-list-item">
+				<span class="task-priority fa fa-circle {{'task-priority-' + overdueTask.priority}}"></span>
+				<span class="nav-label task-name" data-ng-bind="overdueTask.title"></span>
+				<span class="pull-right label label-danger" data-ng-bind="getTaskDonePercentage(overdueTask)"> 0% </span>
 			</a>
 		</li>
 	</ul>
-	<div class="text-center text-muted p-y-1" data-ng-hide="!notifications.$resolved || notifications.tasks.length">
+	<div class="text-center text-muted p-y-1" data-ng-hide="!notifications.$resolved || notifications.overdueTasks.length">
 		No Notifications yet.
 	</div>
 </section>
