--- a/app/public/modules/schedule-notifications/views/notifications-tooltip.client.view.html
+++ b/app/public/modules/schedule-notifications/views/notifications-tooltip.client.view.html
@@ -1,12 +1,12 @@
-<a class="notifications-info" data-ng-class="{disable: !notifications.slots.length}" data-toggle="dropdown">
+<a class="notifications-info" data-ng-class="{disable: !notifications.overdueSlots.length}" data-toggle="dropdown">
     <i class="fa fa-bell" aria-hidden="true"></i>
-    <span class="label" data-ng-class="notifications.slots.length ? 'label-primary' : 'label-default'"
-          data-ng-bind="notifications.slots.length">
+    <span class="label" data-ng-class="notifications.overdueSlots.length ? 'label-primary' : 'label-default'"
+          data-ng-bind="notifications.overdueSlots.length">
     </span>
 </a>
 
-<ul data-ng-init="find()" data-ng-show="notifications.slots.length" class="dropdown-menu dropdown-alerts notifications-dropdown">
-    <li data-ng-repeat="slot in notifications.slots | limitTo: 3 " class="clearfix notification-item">
+<ul data-ng-init="find()" data-ng-show="notifications.overdueSlots.length" class="dropdown-menu dropdown-alerts notifications-dropdown">
+    <li data-ng-repeat="slot in notifications.overdueSlots | limitTo: 3 " class="clearfix notification-item">
 		<div class="pull-left">
 
 			<!-- TODO: note, will throw error when used for event notifications -->
@@ -14,7 +14,7 @@
 			<a data-ui-sref="todo_state.tasks.edit({ taskId: slot.taskId })" class="notification-link"
 			   data-ng-bind="slot.title"></a>
 			<button class="btn btn-primary btn-circle btn-outline"
-					data-ng-click="completeSlot(slot, notifications.tasks)">
+					data-ng-click="completeSlot(slot, notifications.overdueTasks)">
 				<i class="fa fa-chevron-down" aria-hidden="true"></i>
 			</button>
 
