EPMKHRDMH-237: fix import path

--- a/app/public/modules/schedule-notifications/less/notifications.less
+++ b/app/public/modules/schedule-notifications/less/notifications.less
@@ -1,4 +1,4 @@
-@import "/public/modules/tasks/less/task-slots";
+@import "./public/modules/tasks/less/task-slots";
 
 .notifications-dropdown {
   .notification-item {
