EPMKHRDMH-237: fix adding class logic for slot  (generate new slots issue)

--- a/app/public/modules/tasks/views/task-slots.client.view.html
+++ b/app/public/modules/tasks/views/task-slots.client.view.html
@@ -7,7 +7,7 @@
 		<div class="text-center info-msg" ng-if="!slotsRange.length">Please, click to <i class="fa fa-refresh" aria-hidden="true"></i> to generate slots with subtasks</div>
 		<div class="table-responsive slots-table">
 			<table class="table table-no-tb">
-				<tr ng-repeat="item in slotsRange" data-ng-class="{'slot-opacity' : !(isOverdueSlot(item) && !item.isComplete)}">
+				<tr ng-repeat="item in slotsRange" data-ng-class="{'slot-opacity' : !(isOverdueSlot(item) && !item.isComplete) && !createSlot}">
 					<td>{{item.start | date: 'EEEE'}}</td>
 					<td>{{item.start | date: 'dd.MM'}}</td>
 					<td>{{item.duration}}h</td>
