EPMKHRDMH-247 - Added datetime picked on edit task/event pages

--- a/app/public/modules/core/less/core.less
+++ b/app/public/modules/core/less/core.less
@@ -306,6 +306,11 @@ div.ui-notification {
 }
 .bootstrap-datetimepicker-widget {
   font-size: 0.85em;
+
+  .row {
+	  margin: 0;
+  }
+
   &.dropdown-menu {
 	padding: 0;
   }
