EPMKHRDMH: fix empty-list messages for sidebar; hide predefine event templates (sick/vac)

--- a/app/public/modules/schedule-notifications/views/list-notifications.client.view.html
+++ b/app/public/modules/schedule-notifications/views/list-notifications.client.view.html
@@ -8,7 +8,7 @@
 			</a>
 		</li>
 	</ul>
-	<div class="text-center text-muted p-y-1" data-ng-hide="!notifications.$resolved || notifications.overdueTasks.length">
-		No Notifications yet.
+	<div class="text-center text-muted p-y-1" data-ng-hide="notifications.overdueTasks.length">
+		No overdue tasks yet.
 	</div>
 </section>
