--- a/app/public/modules/tasks/views/list-tasks.client.view.html
+++ b/app/public/modules/tasks/views/list-tasks.client.view.html
@@ -40,7 +40,7 @@
 				</a>
 			</li>
 		</ul>
-		<div class="text-center text-muted p-y-1" data-ng-hide="!taskListCtrl.tasks.$resolved || taskListCtrl.tasks.length">
+		<div class="text-center text-muted p-y-1" data-ng-hide="taskListCtrl.tasks.length">
 			No tasks yet. <br/> Please, click on <span class="fa fa-plus-circle"></span> to add new one.
 		</div>
 	</section>
