--- a/app/public/modules/schedule-notifications/views/list-notifications.client.view.html
+++ b/app/public/modules/schedule-notifications/views/list-notifications.client.view.html
@@ -1,7 +1,7 @@
 <section data-ng-controller="ScheduleNotificationsController" data-ng-init="find()">
 	<ul class="nav nav-second-level in collapse">
 		<li data-ng-repeat="overdueTask in notifications.overdueTasks">
-			<a ui-sref="todo_state.tasks.edit({ taskId: overdueTask._id })" class="task-list-item">
+			<a ui-sref="overdue.edit({ taskId: overdueTask._id })" class="task-list-item">
 				<span class="task-priority fa fa-circle {{'task-priority-' + overdueTask.priority}}"></span>
 				<span class="nav-label task-name" data-ng-bind="overdueTask.title"></span>
 				<span class="pull-right label label-danger" data-ng-bind="getTaskDonePercentage(overdueTask) + '%'"> 0% </span>
