--- a/app/public/modules/schedule-notifications/views/notifications-tooltip.client.view.html
+++ b/app/public/modules/schedule-notifications/views/notifications-tooltip.client.view.html
@@ -8,7 +8,7 @@
 <ul data-ng-init="find()" data-ng-show="notifications.overdueSlots.length" class="dropdown-menu dropdown-alerts notifications-dropdown">
     <li data-ng-repeat="slot in notifications.overdueSlots | limitTo: 3 " class="clearfix notification-item">
 		<div class="clearfix">
-			<a data-ui-sref="todo_state.tasks.edit({ taskId: slot.taskId })" class="notification-link"
+			<a data-ui-sref="overdue.edit({ taskId: slot.taskId })" class="notification-link"
 			   data-ng-bind="slot.title"></a>
 			<span class="badge overdue-badge pull-right"
 					data-ng-click="completeSlot(slot, notifications.overdueTasks)">
