EPMKHRDMH: clean redundant ability to create task from templates lists

--- a/app/public/modules/templates/views/templates-tasks-list.client.view.html
+++ b/app/public/modules/templates/views/templates-tasks-list.client.view.html
@@ -1,6 +1,7 @@
 <div href="#" class="nav-item">
 	<span class="nav-label">Tasks templates</span>
-	<a data-ui-sref="todo_state.tasks.create" class="fa fa-plus-circle add-task"></a>
+	<!-- not creating template logic but create task logic -->
+	<!--<a data-ui-sref="todo_state.tasks.create" class="fa fa-plus-circle add-task"></a>-->
 </div>
 <section data-ng-controller="templatesTasksListController as templatesTasksListCtrl">
 	<div class="form-group todo-list-controls" data-ng-show="templatesTasksListCtrl.templatesList.length > 1">
