--- a/app/public/modules/templates/views/templates-events-list.client.view.html
+++ b/app/public/modules/templates/views/templates-events-list.client.view.html
@@ -1,6 +1,7 @@
 <div href="#" class="nav-item">
 	<span class="nav-label">Events templates</span>
-	<a data-ui-sref="todo_state.events.create" class="fa fa-plus-circle add-task"></a>
+	<!-- not creating template logic but create task logic -->
+	<!--<a data-ui-sref="todo_state.events.create" class="fa fa-plus-circle add-task"></a>-->
 </div>
 <section data-ng-controller="templatesEventsListController as templatesEventsListCtrl">
 	<!-- 'templatesEventsListCtrl.templatesList.length > 3' as we have two predefined templates (sick, vacation) -->
