[AD]. EPMKHRDMH-272. Show free time till end date under the estimation slider in create task form

--- a/app/public/modules/tasks/views/create-task.client.view.html
+++ b/app/public/modules/tasks/views/create-task.client.view.html
@@ -67,6 +67,9 @@
 										</rzslider>
 										<input type="number" id="estimation" min="{{slider.options.floor}}" max="{{slider.options.ceil}}"
 											   ng-model="newTask.estimation" data-ng-change="clearSlotsList()" data-ng-pattern="/^\d+$/">
+										<span ng-if="timeAvailability.totalAvailHours">
+											({{timeAvailability.totalAvailHours}} working hours left)
+										</span>
 									</div>
 								</div>
 							</div>
