--- a/app/public/modules/tasks/views/create-task.client.view.html
+++ b/app/public/modules/tasks/views/create-task.client.view.html
@@ -72,6 +72,11 @@
 										</span>
 									</div>
 								</div>
+								<div class="field-group">
+									<button class="btn btn-white btn-block" ng-click="generateSlots()" title="Generate slots">
+										<i class="fa fa-refresh" aria-hidden="true"></i> Generate slots
+									</button>
+								</div>
 							</div>
 							<div class="col-md-4 col-sm-12">
 								<div class="field-group">
