[AD]. EPMKHRDMH-279. Display back link as a button

--- a/app/public/modules/tasks/views/edit-task.client.view.html
+++ b/app/public/modules/tasks/views/edit-task.client.view.html
@@ -1,5 +1,5 @@
 <div class="wrapper-content clearfix" data-ng-controller="TasksController" data-ng-init="editMode()">
-	<a ui-sref="todo_state" class="ui-sref back"> < BACK to "Plan Your Day" </a>
+	<a ui-sref="todo_state" class="ui-sref back btn btn-white"> < BACK to "Plan Your Day" </a>
 
 	<form name="taskForm" novalidate>
 		<div class="row">
