--- a/app/public/modules/tasks/views/create-task.client.view.html
+++ b/app/public/modules/tasks/views/create-task.client.view.html
@@ -1,5 +1,5 @@
 <div class="wrapper create-task-wrapper row clearfix" data-ng-controller="TasksController" data-ng-init="createMode()">
-	<a ui-sref="todo_state" class="ui-sref back"> < BACK to "Plan Your Day" </a>
+	<a ui-sref="todo_state" class="ui-sref back btn btn-white"> < BACK to "Plan Your Day" </a>
 
 	<form class="form-horizontal" novalidate>
 		<fieldset>
