--- a/app/public/modules/core/less/core.less
+++ b/app/public/modules/core/less/core.less
@@ -201,9 +201,9 @@ textarea {
 		font-size: 1.5em;
 	}
 	&__username {
-		max-width: 150px;
+		max-width: 100px;
 		display: inline-block;
-		white-space: nowrap;
+		text-align: center;
 		overflow: hidden;
 		text-overflow: ellipsis;
 		vertical-align: middle;
@@ -219,6 +219,9 @@ textarea {
 		font-size: 16px;
 		padding: 0;
 
+		> * {
+			vertical-align: middle;
+		}
 	}
 
 	> .dropdown-menu a {
