[AD]. EPMKHRDMH-278. Add space between estimation slider and text field

--- a/app/public/modules/tasks/views/create-task.client.view.html
+++ b/app/public/modules/tasks/views/create-task.client.view.html
@@ -68,6 +68,7 @@
 										<input
 											type="number"
 											id="estimation"
+											class="rzslider-manual-input"
 											ng-model="newTask.estimation"
 											data-ng-change="clearSlotsList()"
 											data-ng-pattern="/^\d+$/"
