--- a/app/public/modules/tasks/views/edit-task.client.view.html
+++ b/app/public/modules/tasks/views/edit-task.client.view.html
@@ -38,6 +38,7 @@
 							<input
 								type="number"
 								id="estimation"
+								class="rzslider-manual-input"
 								data-ng-model="task.estimation"
 								data-ng-change="clearSlotsList()"
 								data-ng-pattern="/^\d+$/"
