[AD]. EPMKHRDMH-276. Add white background for create/edit task/event form

--- a/app/public/modules/core/less/core.less
+++ b/app/public/modules/core/less/core.less
@@ -139,8 +139,11 @@ textarea {
 	}
 }
 
-.ibox .row {
-	margin: 0;
+.ibox {
+	.ibox-content {
+		padding: 15px 20px 20px;
+		min-height: 330px;
+	}
 }
 
 .btn-ibox-title {
