--- a/app/public/modules/tasks/views/create-task.client.view.html
+++ b/app/public/modules/tasks/views/create-task.client.view.html
@@ -1,4 +1,4 @@
-<div class="wrapper create-task-wrapper row clearfix" data-ng-controller="TasksController" data-ng-init="createMode()">
+<div class="wrapper-content create-task-wrapper clearfix" data-ng-controller="TasksController" data-ng-init="createMode()">
 	<a ui-sref="todo_state" class="ui-sref back btn btn-white"> < BACK to "Plan Your Day" </a>
 
 	<form class="form-horizontal" novalidate>
@@ -9,89 +9,91 @@
 						<div class="ibox-title">
 							<h5>New task</h5>
 						</div>
-						<div class="ibox-content row">
-							<div class="col-md-4 col-sm-12">
-								<div class="field-group" ng-class="{ error: validationError.title }">
-									<label class="field-label" for="title">Title*</label>
-									<input type="text" data-ng-model="newTask.title"  id="title"
-										   class="form-control input-round-borders" placeholder="Title" required >
-									<div ng-show="validationError.title" class="error">
-										{{validationError.title.message}}
+						<div class="ibox-content">
+							<div class="row">
+								<div class="col-md-4 col-sm-12">
+									<div class="field-group" ng-class="{ error: validationError.title }">
+										<label class="field-label" for="title">Title*</label>
+										<input type="text" data-ng-model="newTask.title"  id="title"
+											   class="form-control input-round-borders" placeholder="Title" required >
+										<div ng-show="validationError.title" class="error">
+											{{validationError.title.message}}
+										</div>
 									</div>
-								</div>
-								<div class="field-group">
-									<label class="field-label" for="templates">Template</label>
-									<select class="form-control" id="templates" data-ng-change="loadTaskTemplate(selectedTemplate)"
-											data-ng-model="selectedTemplate" data-ng-options="template.title for template in user.taskTemplates"
-									>
-										<option value="">Select template</option>
-									</select>
-								</div>
-								<div class="field-group">
-									<label class="field-label" for="priority">Priority*</label>
-									<div data-ng-class="'item-priority-' + newTask.priority">
-										<select name="priority" id="priority" class="form-control item-priority" data-ng-model="newTask.priority"  data-ng-change="clearSlotsList()">
-											<option value="1" class="item-priority-1">Urgent and Important</option>
-											<option value="2" class="item-priority-2">Not Urgent but Important</option>
-											<option value="3" class="item-priority-3">Urgent but not Important</option>
-											<option value="4" class="item-priority-4">Not Urgent and not Important</option>
+									<div class="field-group">
+										<label class="field-label" for="templates">Template</label>
+										<select class="form-control" id="templates" data-ng-change="loadTaskTemplate(selectedTemplate)"
+												data-ng-model="selectedTemplate" data-ng-options="template.title for template in user.taskTemplates"
+										>
+											<option value="">Select template</option>
 										</select>
 									</div>
-									<div ng-show="validationError.priority" class="error">
-										{{validationError.priority.message}}
+									<div class="field-group">
+										<label class="field-label" for="priority">Priority*</label>
+										<div data-ng-class="'item-priority-' + newTask.priority">
+											<select name="priority" id="priority" class="form-control item-priority" data-ng-model="newTask.priority"  data-ng-change="clearSlotsList()">
+												<option value="1" class="item-priority-1">Urgent and Important</option>
+												<option value="2" class="item-priority-2">Not Urgent but Important</option>
+												<option value="3" class="item-priority-3">Urgent but not Important</option>
+												<option value="4" class="item-priority-4">Not Urgent and not Important</option>
+											</select>
+										</div>
+										<div ng-show="validationError.priority" class="error">
+											{{validationError.priority.message}}
+										</div>
+									</div>
+									<div class="checkbox">
+										<label for="isATemplate">
+											<input type="checkbox" data-ng-model="newTask.isATemplate" id="isATemplate">Save as template
+										</label>
+									</div>
+									<div class="checkbox">
+										<label for="withoutDates">
+											<input type="checkbox" data-ng-model="newTask.withoutDates" data-ng-change="clearSlotsList()" id="withoutDates">Task without date
+										</label>
 									</div>
 								</div>
-								<div class="checkbox">
-									<label for="isATemplate">
-										<input type="checkbox" data-ng-model="newTask.isATemplate" id="isATemplate">Save as template
-									</label>
-								</div>
-								<div class="checkbox">
-									<label for="withoutDates">
-										<input type="checkbox" data-ng-model="newTask.withoutDates" data-ng-change="clearSlotsList()" id="withoutDates">Task without date
-									</label>
-								</div>
-							</div>
-							<div class="col-md-4 col-sm-12">
-								<div class="field-group">
-									<datetime-picker data-type="startTime" data-label="Start date" data-activity="newTask" data-picker-id="startDatePicker" data-linked-picker-id="endDatePicker"></datetime-picker>
-								</div>
-								<div class="field-group">
-									<datetime-picker data-type="endTime" data-label="End date" data-activity="newTask" data-picker-id="endDatePicker"></datetime-picker>
-								</div>
-								<div class="field-group">
-									<label class="field-label" for="estimation">Estimation*</label>
-									<div>
-										<rzslider rz-slider-model="newTask.estimation"
-												  rz-slider-options="slider.options">
-										</rzslider>
-										<input
-											type="number"
-											id="estimation"
-											class="rzslider-manual-input"
-											ng-model="newTask.estimation"
-											data-ng-change="clearSlotsList()"
-											data-ng-pattern="/^\d+$/"
-											min="{{slider.options.floor}}"
-											max="{{slider.options.ceil}}"
-										>
-										<span ng-if="timeAvailability.totalAvailHours">
-											({{timeAvailability.totalAvailHours}} working hours left)
-										</span>
+								<div class="col-md-4 col-sm-12">
+									<div class="field-group">
+										<datetime-picker data-type="startTime" data-label="Start date" data-activity="newTask" data-picker-id="startDatePicker" data-linked-picker-id="endDatePicker"></datetime-picker>
+									</div>
+									<div class="field-group">
+										<datetime-picker data-type="endTime" data-label="End date" data-activity="newTask" data-picker-id="endDatePicker"></datetime-picker>
+									</div>
+									<div class="field-group">
+										<label class="field-label" for="estimation">Estimation*</label>
+										<div>
+											<rzslider rz-slider-model="newTask.estimation"
+													  rz-slider-options="slider.options">
+											</rzslider>
+											<input
+												type="number"
+												id="estimation"
+												class="rzslider-manual-input"
+												ng-model="newTask.estimation"
+												data-ng-change="clearSlotsList()"
+												data-ng-pattern="/^\d+$/"
+												min="{{slider.options.floor}}"
+												max="{{slider.options.ceil}}"
+											>
+											<span ng-if="timeAvailability.totalAvailHours">
+												({{timeAvailability.totalAvailHours}} working hours left)
+											</span>
+										</div>
+									</div>
+									<div class="field-group">
+										<button class="btn btn-white btn-block" ng-click="generateSlots()" title="Generate slots">
+											<i class="fa fa-refresh" aria-hidden="true"></i> Generate slots
+										</button>
 									</div>
 								</div>
-								<div class="field-group">
-									<button class="btn btn-white btn-block" ng-click="generateSlots()" title="Generate slots">
-										<i class="fa fa-refresh" aria-hidden="true"></i> Generate slots
-									</button>
-								</div>
-							</div>
-							<div class="col-md-4 col-sm-12">
-								<div class="field-group">
-									<label class="field-label" for="notes">Notes</label>
-									<textarea id="notes" class="form-control" data-ng-model="newTask.notes"></textarea>
-									<div ng-show="validationError.notes" class="error">
-										{{validationError.notes.message}}
+								<div class="col-md-4 col-sm-12">
+									<div class="field-group">
+										<label class="field-label" for="notes">Notes</label>
+										<textarea id="notes" class="form-control" data-ng-model="newTask.notes"></textarea>
+										<div ng-show="validationError.notes" class="error">
+											{{validationError.notes.message}}
+										</div>
 									</div>
 								</div>
 							</div>
