--- a/app/public/modules/tasks/views/edit-task.client.view.html
+++ b/app/public/modules/tasks/views/edit-task.client.view.html
@@ -2,63 +2,68 @@
 	<a ui-sref="todo_state" class="ui-sref back btn btn-white"> < BACK to "Plan Your Day" </a>
 
 	<form name="taskForm" novalidate>
-		<div class="row">
+		<div class="row ibox">
 			<div class="col-md-6 col-xs-12">
-				<div class="row">
-					<div class="col-md-6 col-sm-6">
-						<div class="form-group">
-							<label class="field-label" for="title">Title*</label>
-							<input type="text" id="title" name="title" class="form-control" placeholder="Title"
-								   data-ng-model="task.title" required>
-							<div data-ng-show="taskForm.title.$error.required" class="error-message">
-								<p class="help-block error-text">Please fill Task title</p>
+				<div class="ibox-title">
+					<h5>Edit task</h5>
+				</div>
+				<div class="ibox-content">
+					<div class="row">
+						<div class="col-md-6 col-sm-6">
+							<div class="form-group">
+								<label class="field-label" for="title">Title*</label>
+								<input type="text" id="title" name="title" class="form-control" placeholder="Title"
+									   data-ng-model="task.title" required>
+								<div data-ng-show="taskForm.title.$error.required" class="error-message">
+									<p class="help-block error-text">Please fill Task title</p>
+								</div>
+							</div>
+							<div class="form-group">
+								<label class="field-label" for="priority">Priority*</label>
+								<div data-ng-class="'item-priority-' + task.priority">
+									<select name="priority" id="priority" class="form-control item-priority"
+											data-ng-model="task.priority" data-ng-change="clearSlotsList()">
+										<option value="1" class="item-priority-1">Urgent and Important</option>
+										<option value="2" class="item-priority-2">Not Urgent but Important</option>
+										<option value="3" class="item-priority-3">Urgent but not Important</option>
+										<option value="4" class="item-priority-4">Not Urgent and not Important</option>
+									</select>
+								</div>
+							</div>
+							<div class="checkbox">
+								<label for="withoutDates">
+									<input type="checkbox" id="withoutDates" data-ng-model="task.withoutDates"
+										   data-ng-change="clearSlotsList();">Task without date
+								</label>
+							</div>
+							<div class="form-group">
+								<label class="field-label" for="estimation">Estimation*</label>
+								<rzslider rz-slider-model="task.estimation" rz-slider-options="slider.options"></rzslider>
+								<input
+									type="number"
+									id="estimation"
+									class="rzslider-manual-input"
+									data-ng-model="task.estimation"
+									data-ng-change="clearSlotsList()"
+									data-ng-pattern="/^\d+$/"
+									min="{{slider.options.floor}}"
+									max="{{slider.options.ceil}}"
+								>
 							</div>
 						</div>
-						<div class="form-group">
-							<label class="field-label" for="priority">Priority*</label>
-							<div data-ng-class="'item-priority-' + task.priority">
-								<select name="priority" id="priority" class="form-control item-priority"
-										data-ng-model="task.priority" data-ng-change="clearSlotsList()">
-									<option value="1" class="item-priority-1">Urgent and Important</option>
-									<option value="2" class="item-priority-2">Not Urgent but Important</option>
-									<option value="3" class="item-priority-3">Urgent but not Important</option>
-									<option value="4" class="item-priority-4">Not Urgent and not Important</option>
-								</select>
+						<div class="col-md-6 col-sm-6">
+							<div class="form-group">
+								<datetime-picker data-type="startTime" data-label="Start date" data-activity="task" data-picker-id="startDatePicker" data-linked-picker-id="endDatePicker"></datetime-picker>
+							</div>
+							<div class="form-group">
+								<datetime-picker data-type="endTime" data-label="End date" data-activity="task" data-picker-id="endDatePicker"></datetime-picker>
+							</div>
+							<div class="form-group">
+								<label class="field-label" for="notes">Notes</label>
+								<textarea id="notes" class="form-control" data-ng-model="task.notes"></textarea>
 							</div>
 						</div>
-						<div class="checkbox">
-							<label for="withoutDates">
-								<input type="checkbox" id="withoutDates" data-ng-model="task.withoutDates"
-									   data-ng-change="clearSlotsList();">Task without date
-							</label>
-						</div>
-						<div class="form-group">
-							<label class="field-label" for="estimation">Estimation*</label>
-							<rzslider rz-slider-model="task.estimation" rz-slider-options="slider.options"></rzslider>
-							<input
-								type="number"
-								id="estimation"
-								class="rzslider-manual-input"
-								data-ng-model="task.estimation"
-								data-ng-change="clearSlotsList()"
-								data-ng-pattern="/^\d+$/"
-								min="{{slider.options.floor}}"
-								max="{{slider.options.ceil}}"
-							>
-						</div>
-					</div>
-					<div class="col-md-6 col-sm-6">
-						<div class="form-group">
-							<datetime-picker data-type="startTime" data-label="Start date" data-activity="task" data-picker-id="startDatePicker" data-linked-picker-id="endDatePicker"></datetime-picker>
-						</div>
-						<div class="form-group">
-							<datetime-picker data-type="endTime" data-label="End date" data-activity="task" data-picker-id="endDatePicker"></datetime-picker>
-						</div>
-						<div class="form-group">
-							<label class="field-label" for="notes">Notes</label>
-							<textarea id="notes" class="form-control" data-ng-model="task.notes"></textarea>
-						</div>
-					</div>
+				</div>
 				</div>
 			</div>
 			<div class="col-md-6 col-xs-12">
