EPMKHRDMH-280 - Redesign slots in the calendar

--- a/app/public/modules/core/less/variables.less
+++ b/app/public/modules/core/less/variables.less
@@ -13,10 +13,20 @@
 
 /* naming from http://www.color-blindness.com/color-name-hue/ */
 @color-dark-pink: #e84f5e;
+@color-wewak: #f1959e;
+@color-carissma: #e88c95;
+@color-pale-pink: #fdedef;
 @color-sun: #f28832;
+@color-sea-buckthorn: #ea9b5c;
+@color-tacao: #f7b884;
+@color-serenade: #fce7d6;
 @color-mountain-meadow: #19b293;
+@color-downy: #75d1be;
 @color-mid-grey: #676a6c;
 @color-light-grey: #aeafaf;
+@color-jordy-blue: #77b5dd;
+@color-lavender: #e8f2f9;
+
 
 /* Variables for authorization pages */
 
