--- a/app/public/modules/tasks/less/taskList.less
+++ b/app/public/modules/tasks/less/taskList.less
@@ -126,7 +126,7 @@ ol, ul, li {
 	}
 
 }
-.task {
+.left-sidebar .task {
 	&-priority-1 { color: #ed5565; }
 	&-priority-2 { color: #f3a747; }
 	&-priority-3 { color: #61b394; }
