EPMKHRDMH-281. Hide elements for the demo (incomplete future functionality).

--- a/app/public/modules/tasks/views/create-task.client.view.html
+++ b/app/public/modules/tasks/views/create-task.client.view.html
@@ -47,11 +47,14 @@
 											<input type="checkbox" data-ng-model="newTask.isATemplate" id="isATemplate">Save as template
 										</label>
 									</div>
-									<div class="checkbox">
-										<label for="withoutDates">
-											<input type="checkbox" data-ng-model="newTask.withoutDates" data-ng-change="clearSlotsList()" id="withoutDates">Task without date
-										</label>
-									</div>
+
+									<!-- TODO: future functionality. Now hidden: demo coming soon -->
+									<!--<div class="checkbox">-->
+										<!--<label for="withoutDates">-->
+											<!--<input type="checkbox" data-ng-model="newTask.withoutDates" data-ng-change="clearSlotsList()" id="withoutDates">Task without date-->
+										<!--</label>-->
+									<!--</div>-->
+
 								</div>
 								<div class="col-md-4 col-sm-12">
 									<div class="field-group">
