--- a/app/public/modules/templates/views/templates-tasks.client.view.html
+++ b/app/public/modules/templates/views/templates-tasks.client.view.html
@@ -2,7 +2,9 @@
 	<header class="row" data-ng-show="templates.list">
 		<div class="col-xs-12">
 			<h3 class="col-xs-8">Task template</h3>
-			<h3 class="col-xs-4">Usage</h3>
+
+			<!-- TODO: future functionality. Now hidden: demo coming soon -->
+			<!--<h3 class="col-xs-4">Usage</h3>-->
 		</div>
 	</header>
 	<ul>
@@ -64,9 +66,10 @@
 				</fieldset>
 			</form>
 
-			<div class=" col-xs-4 usage">
-				<h2>Usage</h2>
-			</div>
+			<!-- TODO: future functionality. Now hidden: demo coming soon -->
+			<!--<div class=" col-xs-4 usage">-->
+				<!--<h2>Usage</h2>-->
+			<!--</div>-->
 		</li>
 	</ul>
 	<div class="text-center text-muted p-y-1" data-ng-hide="templates.list.length">No task templates yet.</div>
