--- a/app/public/modules/tasks/views/list-tasks.client.view.html
+++ b/app/public/modules/tasks/views/list-tasks.client.view.html
@@ -26,7 +26,7 @@
 			<div>
 				<label>
 					completed
-					<input type="checkbox" data-ng-model="taskListCtrl.status.isComplete" data-ng-true-value="true"/>
+					<input type="checkbox" data-ng-model="taskListCtrl.status.isComplete"/>
 				</label>
 			</div>
 		</div>
