EPMKHRDMH-290: implement Outlook import

--- a/public/modules/core/views/header.client.view.html
+++ b/public/modules/core/views/header.client.view.html
@@ -39,6 +39,7 @@
 			<ul class="dropdown-menu">
 				<li><a href="#!/settings/profile">Settings</a></li>
 				<li><a href="#!/templates">My templates</a></li>
+				<li><a href="#!/migrate">Import content</a></li>
 				<li><a href="/auth/signout">Logout</a></li>
 			</ul>
 		</li>
