313: assignCtrl with refactoring

--- a/public/modules/core/views/sidebar/sidebar.client.view.html
+++ b/public/modules/core/views/sidebar/sidebar.client.view.html
@@ -1,6 +1,6 @@
 <aside class="left-sidebar navbar-default navbar-static-side">
     <div class="sidebar-collapse">
-        <ul class="nav" data-ng-controller="AsideCtrl as sidebarCtrl">
+        <ul class="nav" data-ng-controller="mihAsideCtrl as sidebarCtrl">
             <select class="nav-header nav-title left-sidebar__category-control"
                     data-ng-model="sidebarCtrl.selectedTopState"
                     data-ng-options="topState.data.menuLabel for topState in sidebarCtrl.topStates"
